--- a/Project.toml
+++ b/Project.toml
@@ -1,11 +1,13 @@
 [deps]
 ChainRules = "082447d4-558c-5d27-93f4-14fc19e9eca2"
 Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
+Flux = "587475ba-b771-5e3f-ad9e-33799f191a9c"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 PkgPage = "e7214860-93a8-4f22-b43d-bd447d1a2094"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 Pluto = "c3e4b0f8-55cb-11ea-2926-15256bba5781"
 PlutoUI = "7f904dfe-b85e-4ff6-b463-dae2292396a8"
+ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
 ShortCodes = "f62ebe17-55c5-4640-972f-b59c0dd11ccf"
 Yao = "5872b779-8223-5990-8dd0-5abbb0748c8c"
 YaoExtensions = "7a06699c-c960-11e9-3c98-9f78548b5f0f"
